# scribus-manual-development

./: DEBG_debugging.md  DIAL_creating_a_dialog_with_QT_Designer.md  GITB_git.md  GITW_working_with_git.md  GLSR_glossary.md  HOWH_how_can_you_help.md  LICENSE.md  NOTES.md  PLUG_creating_a_plugin.md  README.md  SCRP_enhancing_the_scripter.md  SETP_setup_your_developing_environment.md  mkdocs.yml  project-grav.yaml  scripting_-_an_introduction.md  ui-ux.md  user_interface.md
content/: NOTES.md  README.md  TOC.yaml  compiling-on-linux-en.md  compiling-on-macos.md  compiling-troubleshooting-en.md  compiling-with-docker-en.md  compiling-with-qt-creator-en.md  compiling-with-visual-studio-en.md  compiling-with-visual-studio.md  documentation-en.md  getting-the-code-en.md  getting-the-dependencies-en.md  getting-the-dependencies-linux-en.md  introduction-en.md  language-support-en.md  library-en.md  patches-github-command-line-en.md  patches-github-desktop-en.md  patches-gitlab-command-line-en.md  patches-svn-en.md  plugin.md  scripter.md  toc-en.md  translating-ui-en.md
content/community/: community-github.md  community.md  team-contributors.md
content/getting-started/: getting-started.md
content/how-you-can-help/: NOTES.md
content/icons/: NOTES.md
content/literature/: literature.md
content/non-programmers/: NOTES.md
content/patches_-_first-patch/: first-patch.md
download/pluginsample_base/: CMakeLists.txt  CMakeLists_parent.txt  README.txt  sampleplugin.cpp  sampleplugin.h
download/pluginsample_dialog/: CMakeLists.txt  sampledialog.h  sampleplugin.cpp  sampleplugin.h
draft/: code_organisation.mkd  windows.md
(+15 files in other folders)
