INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_SAMPLE_PLUGIN_MOC_CLASSES
  sampleplugin.h
)
SET(SCRIBUS_SAMPLE_PLUGIN_SOURCES
  sampleplugin.cpp
)

SET(SCRIBUS_SAMPLE_PLUGIN "sampleplugin")

QT4_WRAP_CPP(SCRIBUS_SAMPLE_PLUGIN_MOC_SOURCES ${SCRIBUS_SAMPLE_PLUGIN_MOC_CLASSES})
ADD_LIBRARY(${SCRIBUS_SAMPLE_PLUGIN} MODULE ${SCRIBUS_SAMPLE_PLUGIN_SOURCES} ${SCRIBUS_SAMPLE_PLUGIN_MOC_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_SAMPLE_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_SAMPLE_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)
